# libimxdmabuffer

./: CMakeLists.txt  README.md  imxdmabuffer_config.h.in  wscript
imxdmabuffer/: imxdmabuffer.c  imxdmabuffer.h  imxdmabuffer_dma_heap_allocator.c  imxdmabuffer_g2d_allocator.c
